# base-repository

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  README.ko.md  README.md  docker-compose.perf-db.yml  inspect_litestar.py  makefile  pyproject.toml  pytest.ini  setup.py  tox.ini
.agent/rules/: project-structure.md
.github/workflows/: ci.yml  publish.yml
base_repository/: __init__.py  base_filter.py  base_mapper.py  enums.py  exceptions.py  repo_types.py  sa_helper.py  session_provider.py  utils.py  validator.py
base_repository/litestar/: __init__.py  pagination.py  repository.py
base_repository/query/: __init__.py  converter.py  list_query.py
base_repository/query/strategies/: __init__.py  keyset.py  offset.py  order_by.py
base_repository/repository/: __init__.py  base_repo.py  base_repo.pyi
docs/: about_performance.ko.md  about_performance.md  dependency_test.md  how_to_use.ko.md  how_to_use.md
docs/perf_results/run_20251126T065306Z/: index.html
docs/perf_results/run_20251127T050031Z/: index.html
docs/perf_results/run_20251205T025441Z/: index.html
docs/perf_results/run_20251205T030413Z/: index.html
references/: pyproject.toml
scripts/: perf_list_runs.py  perf_view.py
tests/: fakes.py  models.py  schemas.py  test_base_mapper.py  test_base_repo.py  test_enums.py  test_filter.py  test_keyset_strategies.py  test_list_query.py  test_offset_strategies.py  test_order_strategy.py  test_sa_helper.py  test_types.py  test_validator.py
tests/litestar/: test_integration.py
tests/perf/: conftest.py  db_config.py  perf_cpu_only.py  perf_db_crud.py  perf_reporter.py
tests/perf/seed/: bulk_seed_loader.py  config.py  generate_seed_csv.py
